# Sky-Observer

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: ci.yml
src/: main.py
src/sky_observer/: app.py  main.py
src/sky_observer/db/: connection.py  observacao.py  observacao_repository.py  observacao_service.py
src/sky_observer/infra/openmeteo/: README.md  client.py  utils.py
src/sky_observer/ui/: main_window.py
test/infra/openmeteo/: client_test.py
