[project]
name = "sky-observer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.3",
    "requests-cache>=1.3.2",
    "retry-requests>=2.0.0",
    "skyfield>=1.54",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
