[project]
name = "sky-observer"
version = "0.1.0"
description = "Usando sua localização, nosso app avalia o clima e a qualidade do céu em tempo real. Encontre objetos celestes visíveis e receba instruções simples para calibrar seu telescópio."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "niquests>=3.18.8",
    "niquests-cache>=0.2.4",
    "numpy>=2.4.6",
    "openmeteo-requests>=1.7.5",
    "pandas>=3.0.3",
    "retry-requests>=2.0.0",
    "skyfield>=1.54",
]

[project.scripts]
start = "sky_observer.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "ruff>=0.15.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sky_observer"]

[tool.ruff]
indent-width = 2

[tool.ruff.format]
indent-style = "space"
